# c64cast

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  c64cast.py  c64cast.schema.json  codecov.yml  mise.toml  pyproject.toml  tron.toml  wargames.toml
.claude/skills/hw-visual-verify/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
assets/: README.md
assets/audio/: README.md
assets/logos/: README.md
assets/models/: README.md
assets/pictures/: README.md
assets/programs/: README.md
assets/roms/: README.md
assets/sids/: README.md
assets/videos/: README.md
c64cast/: __init__.py  _native_io.py  _pollthread.py  api.py  asid.py  asid_broadcast.py  asid_player.py  asid_scene.py  asid_sidmap.py  audio.py  audio_features.py  audio_marker.py  audio_source.py  backend.py  backgrounds.py  bitmap_text.py  c64.py  camera.py  cli.py  config.py  config_serialize.py  connect.py  control_plane.py  dac_calibration.py  dac_curves.py  dither.py  doctor.py  dsp.py  effects.py  ensemble.py  frame_source.py  framebuffer.py  generators.py  interstitial.py  introspect.py  keyboard.py  midi_control.py  midi_scene.py  midi_setup.py  modes.py  (+36 more)
c64cast/orchestrators/: __init__.py  big_text_span.py
c64cast/overlays/: __init__.py  big_text.py  callsign.py  clock.py  corner_text.py  countdown.py  logo.py  marquee.py  menu.py  network.py  obs_status.py  rss.py  scrolling_text.py  spectrum_petscii.py  weather.py
calibration/: README.md
config/: c64cast.example.toml
config/examples/: README.md  audio-reactive-input.toml  audio-reactive-listen.toml  color-dither.toml  color-force-palette.toml  effect-chain.toml  effect-reactive.toml  effect-trails.toml  hello.toml  menu.toml  overlay-big_text.toml  overlay-callsign.toml  overlay-clock.toml  overlay-countdown.toml  overlay-logo.toml  overlay-marquee.toml  overlay-network.toml  overlay-obs_status.toml  overlay-rss.toml  overlay-scrolling_text.toml  overlay-spectrum_petscii.toml  overlay-weather.toml  performance-clips.toml  scene-asid.toml  scene-blank.toml  scene-commercial.toml  scene-generative-colored-bursts.toml  scene-generative-dna.toml  scene-generative-dotswarm.toml  scene-generative-drift.toml  scene-generative-epicycle.toml  scene-generative-fire.toml  scene-generative-fireworks.toml  scene-generative-game-of-life.toml  scene-generative-halo.toml  scene-generative-hiphotic.toml  scene-generative-hopalong.toml  scene-generative-lissajous.toml  scene-generative-mandelbrot.toml  scene-generative-metaballs.toml  (+24 more)
config/examples/ensemble/: README.md  left.toml  master.toml  middle.toml  right.toml
config/vcfsw-2026/: README.md  left.toml  master.toml  middle.toml  right.toml
docs/: architecture.md  caveats.md  extending.md  troubleshooting.md  usage.md
docs/architecture/: audio.md  config.md  control.md  hardware-io.md  scenes.md  sid.md  video-color.md  wled.md
presets/: README.md
scripts/: bench.py  c64cast.sh  cast.sh  coverage.sh  fake_u64.py  pre-commit.sh  scene_config_to_description.py
scripts/diags/: README.md  _diaglib.py  asid_broadcast_loopback.py  asid_multisid_stream.py  audio_capture.py  av_sync_probe.py  bitmap_engage_clear_probe.py  capture_fidelity_probe.py  dac_clock_calib.py  dac_curve.py  doublebuffer_tear_ab.py  dsp_ab.py  dsp_hw_ab.py  dsp_noise.py  gen_blue_noise.py  hdmi_capture.py  hostdma_drift_probe.py  kbbuf_probe.py  led_feedback_demo.py  mahoney_compare_chips.py  mahoney_dac_calib.py  mahoney_measured_tables.json  make_fixtures.py  measure_mhires_fps_compensation.py  measure_r_rate_all_modes.py  menu_inject.py  mhires_ema_ghost_ab.py  mhires_pitch_tempo_ab.py  mhires_tempo_clock_ab.py  midi_drive.py  midi_monitor.py  nmi_pitch_ab.py  nmi_rate_ab.py  nmi_rate_sweep_ab.py  quant_noise_ab.py  render_offline.py  reu_audio_plain.toml  reu_audio_spectrum.py  reu_audio_tracked.toml  reu_margin_probe.py  (+18 more)
tests/: _fakes.py  test_api.py  test_asid.py  test_asid_broadcast.py  test_asid_player.py  test_asid_scene.py  test_asid_sidmap.py  test_audio.py  test_audio_device_resolve.py  test_audio_features.py  test_audio_lifecycle.py  test_audio_marker.py  test_audio_source_sid.py  test_backend.py  test_backgrounds.py  test_big_text.py  test_big_text_span.py  test_bitmap_compose.py  test_bitmap_overlays.py  test_blank_mode.py  test_camera.py  test_cell_strategy.py  test_config.py  test_config_serialize.py  test_connect.py  test_control_plane.py  test_dac_calibration.py  test_dac_curves.py  test_dither.py  test_dither_compose.py  test_doctor.py  test_dsp.py  test_dsp_wiring.py  test_effect_chain.py  test_ensemble.py  test_ensemble_audio_lock.py  test_ensemble_config.py  test_ensemble_shutdown.py  test_example_toml_drift.py  test_fuzzy_suggestions.py  (+51 more)
