[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "c64cast"
version = "0.1.0"
description = "C64 AV streamer (Ultimate 64 platform)"
requires-python = ">=3.11"   # tomllib is stdlib
license = { text = "MIT" }
authors = [
    { name = "Kelly Fox" },
]
keywords = ["commodore-64", "ultimate-64", "demoscene", "streaming", "sid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video :: Display",
]

# Hard dependencies — without these the package won't import.
# py65 is hard because the built-in WaveformScene depends on it for
# host-side SID register-state tracking (the U64's SID is real
# hardware: writes only, reads return 0, so we run a parallel py65
# 6502 to recover live $D4xx state). Pure Python, no C extension.
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.5",
    "py65>=1.2",
    "requests>=2.28",
]

[project.optional-dependencies]
# Mic capture (the 4-bit SID DAC streaming path).
mic = ["sounddevice>=0.4"]
# Commercial playback uses PyAV for container demux + audio resampling.
commercials = ["av>=10"]
# Local preview window + stream recording (preview uses pygame, recording
# uses cv2's VideoWriter which ships in opencv-python).
preview = ["pygame>=2.5"]
# FastAPI-based HTTP control plane (pause/resume/skip/reload).
control = ["fastapi>=0.100", "uvicorn>=0.23"]
# OBS Studio status overlay (websocket v5).
obs = ["obsws-python>=1.6"]
# MIDI → SID scene (live MIDI input controls SID voices).
midi = ["mido>=1.3", "python-rtmidi>=1.5"]
# Pretty terminal logging (colored levels + timestamps). Falls back to
# plain logging.StreamHandler when not installed.
logging = ["rich>=13"]
# TeensyROM+ hardware backend over USB serial (pyserial). The raw-TCP
# transport (port 2112) needs no extra dependency.
tr = ["pyserial>=3.5"]
# Camera-as-input: webcam hand-gesture control (MediaPipe HandLandmarker).
# opencv/numpy are already hard deps; only mediapipe is extra. Needs a
# separately-downloaded .task model (see assets/models/README.md).
vision = ["mediapipe>=0.10"]
# Interactive config builder (`c64cast --init`). questionary pulls in
# prompt_toolkit; both are small pure-Python deps.
wizard = ["questionary>=2.0"]
# Everything optional, for users who want the full experience.
all = [
    "sounddevice>=0.4",
    "av>=10",
    "pygame>=2.5",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "obsws-python>=1.6",
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "rich>=13",
    "pyserial>=3.5",
    "mediapipe>=0.10",
    "questionary>=2.0",
]
[dependency-groups]
# Dev tools — not published to PyPI. Installed by default via
# [tool.uv] default-groups; CI pulls them with `--group dev`. Use the uv
# workflow (`uv sync --all-extras`) rather than `pip install -e .[dev]` —
# groups are not extras and can't be requested through `.[...]` syntax.
dev = [
    "ruff>=0.1",
    "coverage>=7",
    "mypy>=1.8",
    "types-requests",
    "pyright>=1.1.400",
    # Validates the generated JSON schema against the example configs in
    # tests/test_schema.py. Dev-only; the runtime never imports it.
    "jsonschema>=4",
    # Required by fastapi.testclient (Starlette's TestClient) for the
    # control-plane end-to-end tests in tests/test_control_plane.py. FastAPI
    # declares it optional, so the `control` extra doesn't pull it; without it
    # those 13 tests skip. Dev-only; the runtime never imports it.
    "httpx>=0.27",
    # JUnit XML reporter for the unittest suite (a unittest.TestRunner
    # subclass, NOT a different test framework). CI runs the suite through
    # `python -m xmlrunner discover` so Codecov Test Analytics can ingest the
    # results. Dev/CI-only; the runtime never imports it.
    "unittest-xml-reporting>=3",
]

[project.scripts]
c64cast = "c64cast.cli:main"

[project.urls]
Homepage = "https://github.com/kfox/c64cast"

[tool.setuptools.packages.find]
where = ["."]
include = ["c64cast*"]

# --- ruff ------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
]
ignore = [
    "E501",  # line too long — we use 100 but defer to formatter
    "E731",  # lambda assignment — used intentionally in factories
    "B008",  # function call in default argument — argparse uses these
    "SIM117", # nested with: blocks read fine for resource-pair management
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]   # allow late imports inside test methods
"c64cast/overlays/__init__.py" = ["E402"]   # late-block re-export of backgrounds
"c64cast/scenes.py" = ["E741"]   # `l` for LAB-color split is canonical opencv idiom

# --- uv --------------------------------------------------------------------
[tool.uv]
default-groups = ["dev"]

# --- mypy ------------------------------------------------------------------
# Strict on the state-bearing modules (api, audio, playlist, socket_dma,
# scenes, config). The rest of the codebase is gradually-typed and would
# explode under --strict; modes.py especially mixes numpy with cv2 in ways
# that don't survive strict checking without heavy annotation noise.
# Run with `make typecheck`.
[tool.mypy]
python_version = "3.11"
files = [
    "c64cast/api.py",
    "c64cast/backend.py",
    "c64cast/audio.py",
    "c64cast/playlist.py",
    "c64cast/socket_dma.py",
    "c64cast/scenes.py",
    "c64cast/config.py",
    "c64cast/dsp.py",
]
strict = true
# Untyped helpers in the rest of the package are fine as-is; don't
# cascade strict-mode errors into them.
follow_imports = "silent"

[[tool.mypy.overrides]]
# Third-party libs without type stubs.
module = ["sounddevice", "av", "av.*", "pygame", "pygame.*",
          "uvicorn", "obsws_python", "mido", "py65", "py65.*",
          "serial", "serial.*"]
ignore_missing_imports = true

# --- pyright ---------------------------------------------------------------
# Basic mode matches Pylance's VS Code default so editor diagnostics align
# with CI. mypy --strict still polices the hot modules; pyright catches the
# broader Pylance-visible mistakes across the rest of the codebase + tests.
[tool.pyright]
include = ["c64cast", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"

# --- coverage --------------------------------------------------------------
[tool.coverage.run]
source = ["c64cast"]
branch = true
omit = [
    "tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
]
